# lox-cxx

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
lox/: control_flow.lox  logic.lox  loop.lox  main.lox
src/: ast.cpp  ast.h  bytecode.cpp  bytecode.h  bytecode_compiler.cpp  bytecode_compiler.h  disassembler.cpp  disassembler.h  environment.cpp  environment.h  error.cpp  error.h  lexer.cpp  lexer.h  lox.cpp  lox.h  lox_boolean.cpp  lox_boolean.h  lox_callable.cpp  lox_callable.h  lox_nil.cpp  lox_nil.h  lox_number.cpp  lox_number.h  lox_object.cpp  lox_object.h  lox_string.cpp  lox_string.h  main.cpp  parser.cpp  parser.h  source_location.cpp  source_location.h  token.cpp  token.h  tree_walk.cpp  tree_walk.h  vm.cpp  vm.h  vm_instruction.cpp  (+1 more)
test/: CMakeLists.txt  lexer.cpp
